Lots of changes tbh

--- a/mangohud/.config/MangoHud/MangoHud.conf
+++ b/mangohud/.config/MangoHud/MangoHud.conf
@@ -16,7 +16,7 @@ fps_limit=0
 # fps_limit_method=
 
 ### VSync [0-3] 0 = adaptive; 1 = off; 2 = mailbox; 3 = on
-vsync=-1
+vsync=1
 
 ### OpenGL VSync [0-N] 0 = off; >=1 = wait for N v-blanks, N > 1 acts as a FPS limiter (FPS = display refresh rate / N)
 # gl_vsync=-2
@@ -95,7 +95,7 @@ preset=1
 # gpu_list=0,1
 
 ### Display the current CPU information
-cpu_stats
+# cpu_stats
 # cpu_temp
 # cpu_power
 # cpu_text=
