--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -7,11 +7,12 @@
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
+        "custom/appmenu",
         "hyprland/workspaces",
         "wlr/taskbar"
     ],
     "modules-center": [
-        "clock"
+        "clock",
     ],
     "modules-right": [
         "pulseaudio",
@@ -29,7 +30,7 @@
          "format-icons": {
              //"urgent": "",
              //"active": "",
-             //"default": ""
+             // "default": ""
              "urgent": "",
              "active": "",
              "default": ""
@@ -45,9 +46,10 @@
         "tooltip-format": "{title}",
         "on-click": "activate",
         "on-click-middle": "close",
-        "ignore-list": [
-            "kitty"
-        ],
+        // "ignore-list": [
+        //     "kitty"
+        // ],
+        "all-outputs": true,
      },
     "tray": {
         "icon-size": 20,
@@ -62,7 +64,7 @@
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{icon}   {volume}%",
+        "format": "{icon} {volume}%",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
@@ -75,7 +77,7 @@
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ["", "", ""]
+            "default": ["", "", "󰕾"]
         },
         "on-click": "pavucontrol"
     },
@@ -83,5 +85,10 @@
         "format" : "⏻",
         "on-click": "wlogout",
 		"tooltip": false
+    },
+    "custom/appmenu": {
+    "format": "󰣇",
+    "on-click": "rofi -show drun -replace -show-icons",
+    "tooltip-format": "Open the application launcher"
     }
 }
