Added git aliases and nomacs floating windowrule

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -366,3 +366,4 @@ windowrule = float, class:^(org.pulseaudio.pavucontrol)$
 windowrule = size 50% 50%, class:^(org.pulseaudio.pavucontrol)$
 windowrule = float, class:^(vlc)$ 
 windowrule = move 0 0, class:^(vlc)$ 
+windowrule = float, class:^(org.nomacs.ImageLounge)$
