--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -271,6 +271,7 @@ bind = $mainMod, O, togglesplit, # dwindle
 
 # Fullscreen
 bind = $mainMod SHIFT, F, fullscreen, 0
+bind = $mainMod, F, fullscreen, 1
 
 # Screenshots
 bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
