--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -269,6 +269,12 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 
+# btop (Basically task manager)
+bind = $mainMod, TAB, exec, [float; size 1200, 700] kitty btop
+
+# Notifications
+bind = $mainMod, N, exec, swaync-client -t -sw
+
 # Fullscreen
 bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod, F, fullscreen, 1
