--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -51,7 +51,7 @@ $menu = rofi -show drun -replace -show-icons
 # exec-once = $terminal
 
 # Startup backgorund apps
-exec-once = waybar & hyprpaper & swaync & hypridle & nm-applet & playerctld daemon & solaar --window=hide
+exec-once = waybar & hyprpaper & swaync & hypridle & nm-applet & playerctld daemon & solaar --window=hide & kbuildsycoca6
 
 # Initial gui apps to run
 exec-once = [workspace 1 silent] firefox
